--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ services:
 
 before_install:
   - docker build -t patrickae/docker-react -f Dockerfile.dev .
+
+script:
+  - docker run patrickae/docker-react npm run test -- --coverage
